--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav>
             <ul>
                 <li>
-                    <img src="https://placehold.it/200x70" alt="200x70"/>
+                    <img src="https://placehold.it/200x70.jpg" alt="200x70"/>
                 </li>
                 <li>
                     <a href="">NavItem1</a>
@@ -33,23 +33,23 @@
     </header>
     <main>
         <section>
-            <img src="https://placehold.it/960x450" alt="690x450pic">
+            <img src="https://placehold.it/960x450.jpg" alt="690x450pic">
         </section>
         <section>
             <article>
-                <img src="https://placehold.it/300x375" alt="300x375pic">
+                <img src="https://placehold.it/300x375.jpg" alt="300x375pic">
             </article>
             <article>
-                <img src="https://placehold.it/300x375" alt="300x375pic">
+                <img src="https://placehold.it/300x375.jpg" alt="300x375pic">
             </article>
             <article>
-                <img src="https://placehold.it/300x375" alt="300x375pic">
+                <img src="https://placehold.it/300x375.jpg" alt="300x375pic">
             </article>
         </section>
         <section>
             
                 <div>
-                    <img src="https://placehold.it/480x400" alt="480x400pic">
+                    <img src="https://placehold.it/480x400.jpg" alt="480x400pic">
                 </div>
                 <div >
                     <h3>Feature Section Heading</h3>
